-Fix Templates -Changed sizing and spacing of text

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -100,8 +100,8 @@ body {
     margin-left: .75rem;
 }
 .col-8 p{
-    font-size: 26px;
-    line-height: 43px;
+    font-size: 23px;
+    line-height: 39px;
 }
 /* Featurettes
 ------------------------- */
